# flask-blog-app

./: .gitignore  add_post.py  pyproject.toml  run.py
app/: __init__.py  config.py  forms.py  models.py  routes.py
app/errors/: handlers.py
app/main/: routes.py
app/posts/: forms.py  routes.py
app/static/: main.css
app/templates/: about.html  account.html  base.html  create_post.html  home.html  login.html  post.html  register.html  reset_password.html  reset_request.html  user.html
app/templates/errors/: 403.html  404.html  500.html
app/users/: forms.py  routes.py  utils.py
